--- a/group_vars/secrets.yml
+++ b/group_vars/secrets.yml
@@ -1,5 +1,6 @@
 ---
 creds:
-  username: carter
-  password: cisco
+  ansible_network_os: ios
+  username: "carter"
+  password: "cisco"
   ansible_python_interpreter: /usr/bin/python3
